--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
